--- a/COSII/COSII_Lab1/UI/Views/Shared/_Layout.cshtml
+++ b/COSII/COSII_Lab1/UI/Views/Shared/_Layout.cshtml
@@ -14,10 +14,10 @@
         <section class="top-bar-section">
             <ul class="title-area">
                 <li class="name">
-                    <h1>@Html.ActionLink("Separately", "Index", "Separately")</h1>
+                    <h1>@Html.ActionLink("Separately", "Separately", "Home")</h1>
                 </li>
                 <li class="name">
-                    <h1>@Html.ActionLink("Comparison", "Index", "Comparison")</h1>
+                    <h1>@Html.ActionLink("Comparison", "Comparison", "Home")</h1>
                 </li>
             </ul>
         </section>
