--- a/COSII/COSII_Lab1/UI/Views/Shared/_Layout.cshtml
+++ b/COSII/COSII_Lab1/UI/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <script src="~/Scripts/dx.chartjs.js"></script>
 </head>
 <header>
-    <nav class="top-bar top-bar-padding">
+    @*<nav class="top-bar top-bar-padding">
         <section class="top-bar-section">
             <ul class="title-area">
                 <li class="name">
@@ -21,7 +21,7 @@
                 </li>
             </ul>
         </section>
-    </nav>
+    </nav>*@
     <div id="workForm"></div>
     <div id="background" class="background-dark"></div>
 </header>
