--- a/COSII/COSII_Lab1/UI/Views/Home/Index.cshtml
+++ b/COSII/COSII_Lab1/UI/Views/Home/Index.cshtml
@@ -1,28 +1,32 @@
-﻿<script type="text/javascript">
-    $(function () {
-        var dataSource = [
-         { year: 1997, cluster: -0.000000000002 },
-         { year: 1999, cluster: -0.0000000000015 },
-         { year: 2001, cluster: -0.0000000000011356342324 },
-         { year: 2003, cluster: 0 },
-         { year: 2005, cluster: 0.000000000001 },
-         { year: 2007, cluster: 0.000000000002 }
-        ];
+﻿@model UI.Models.Counter
 
-        $("#chartContainer").dxChart({
+<script type="text/javascript">
+    var dataSource = [];
+    var series = [];
+
+    $(function () {
+        getFunction(pushOriginalFunction, 'GetOriginalFunction', '#chartOriginalFunction', 'line', 'Original Function');
+        getFunction(pushFFT, 'GetFFT', '#chartFFT', 'line', 'After FFT');
+        getFunction(pushFFTPhase, 'GetPhaseFFT', '#chartFFTPhase', 'line', 'Phase Spectrum FFT');
+        getFunction(pushFFTAmplitude, 'GetAmplitudeFFT', '#chartFFTAmplitude', 'line', 'Amplitude Spectrum FFT');
+        getFunction(pushDFT, 'GetDFT', '#chartDFT', 'line', 'After DFT');
+        getFunction(pushDFTPhase, 'GetPhaseDFT', '#chartDFTPhase', 'line', 'Phase Spectrum DFT');
+        getFunction(pushDFTAmplitude, 'GetAmplitudeDFT', '#chartDFTAmplitude', 'line', 'Amplitude Spectrum DFT');
+    });
+
+    function drawCharts(title, type, chartId) {
+        $(chartId).dxChart({
             dataSource: dataSource,
             commonSeriesSettings: {
-                type: "spline",
-                argumentField: "year"
+                type: type,
+                argumentField: "x"
             },
             commonAxisSettings: {
                 grid: {
                     visible: true
                 }
             },
-            series: [
-                { valueField: "cluster", name: "Cluster" }
-            ],
+            series: series,
             tooltip: {
                 enabled: true
             },
@@ -30,7 +34,7 @@
                 verticalAlignment: "bottom",
                 horizontalAlignment: "center"
             },
-            title: "Architecture Share Over Time (Count)",
+            title: title,
             commonPaneSettings: {
                 border: {
                     visible: true,
@@ -38,13 +42,136 @@
                 }
             }
         });
-    });
+    }
+
+    function pushOriginalFunction(data) {
+        clearData();
+        for (var i = 0; i < data.X.length; i++) {
+            dataSource.push({ x: data.X[i], original: data.Y[i] });
+        }
+        series.push({ valueField: 'original', name: 'sin(3x) + cos(3x)' });
+    }
+
+    function pushFFT(data) {
+        clearData();
+        for (var i = 0; i < data.X.length; i++) {
+            dataSource.push({ x: data.X[i], FFT: data.Y[i] });
+        }
+        series.push({ valueField: 'FFT', name: 'FFT' });
+    }
+
+    function pushFFTPhase(data) {
+        clearData();
+        for (var i = 0; i < data.X.length; i++) {
+            dataSource.push({ x: data.X[i], FFTPhase: data.Y[i] });
+        }
+        series.push({ valueField: 'FFTPhase', name: 'Phase Spectrum FFT' });
+    }
+
+    function pushFFTAmplitude(data) {
+        clearData();
+        for (var i = 0; i < data.X.length; i++) {
+            dataSource.push({ x: data.X[i], FFTAmplitude: data.Y[i] });
+        }
+        series.push({ valueField: 'FFTAmplitude', name: 'Amlitude Spectrum FFT' });
+    }
+
+    function pushDFT(data) {
+        clearData();
+        for (var i = 0; i < data.X.length; i++) {
+            dataSource.push({ x: data.X[i], DFT: data.Y[i] });
+        }
+        series.push({ valueField: 'DFT', name: 'DFT' });
+    }
+
+    function pushDFTPhase(data) {
+        clearData();
+        for (var i = 0; i < data.X.length; i++) {
+            dataSource.push({ x: data.X[i], DFTPhase: data.Y[i] });
+        }
+        series.push({ valueField: 'DFTPhase', name: 'Phase Spectrum DFT' });
+    }
+
+    function pushDFTAmplitude(data) {
+        clearData();
+        for (var i = 0; i < data.X.length; i++) {
+            dataSource.push({ x: data.X[i], DFTAmplitude: data.Y[i] });
+        }
+        series.push({ valueField: 'DFTAmplitude', name: 'Amlitude Spectrum DFT' });
+    }
+
+    function getFunction(callback, viewName, chartId, type, title) {
+        $.ajax({
+            url: "/Home/" + viewName,
+            type: "POST",
+            dataType: "json",
+            success: function (data) {
+                callback(data);
+                drawCharts(title, type, chartId);
+            }
+        });
+    }
+
+    function clearData() {
+        dataSource = [];
+        series = [];
+    }
+
 </script>
+
+<nav class="top-bar top-bar-padding">
+    <section class="top-bar-section">
+        <ul class="title-area">
+            <li class="name">
+                <h1><a href="#">DFT Count: @Model.DFTCount</a></h1>
+            </li>
+            <li class="name">
+                <h1><a href="#">FFT Count: @Model.FFTCount</a></h1>
+            </li>
+        </ul>
+    </section>
+</nav>
 <div class="content">
     <div class="pane">
         <div class="long-title">
             <h3></h3>
         </div>
-        <div id="chartContainer" style="width: 100%; height: 440px;"></div>
+        <div id="chartOriginalFunction" style="width: 100%; height: 440px;"></div>
+    </div>
+    <div class="pane">
+        <div class="long-title">
+            <h3></h3>
+        </div>
+        <div id="chartFFT" style="width: 100%; height: 440px;"></div>
+    </div>
+    <div class="pane">
+        <div class="long-title">
+            <h3></h3>
+        </div>
+        <div id="chartFFTPhase" style="width: 100%; height: 440px;"></div>
+    </div>
+    <div class="pane">
+        <div class="long-title">
+            <h3></h3>
+        </div>
+        <div id="chartFFTAmplitude" style="width: 100%; height: 440px;"></div>
+    </div>
+    <div class="pane">
+        <div class="long-title">
+            <h3></h3>
+        </div>
+        <div id="chartDFT" style="width: 100%; height: 440px;"></div>
+    </div>
+    <div class="pane">
+        <div class="long-title">
+            <h3></h3>
+        </div>
+        <div id="chartDFTPhase" style="width: 100%; height: 440px;"></div>
+    </div>
+    <div class="pane">
+        <div class="long-title">
+            <h3></h3>
+        </div>
+        <div id="chartDFTAmplitude" style="width: 100%; height: 440px;"></div>
     </div>
 </div>
