--- a/COSII/COSII_Lab/UI/Views/Home/Lab1.cshtml
+++ b/COSII/COSII_Lab/UI/Views/Home/Lab1.cshtml
@@ -1,5 +1,10 @@
 @model UI.Models.Counter
 
+@{
+    ViewBag.Title = "Lab1";
+}
+
+<script src="~/Scripts/chartsLab1.js"></script>
 <script type="text/javascript">
     var dataSource = [];
     var series = [];
