--- a/COSII/COSII_Lab/UI/Views/Home/Index.cshtml
+++ b/COSII/COSII_Lab/UI/Views/Home/Index.cshtml
@@ -1,12 +1,3 @@
-<nav class="top-bar top-bar-padding">
-    <section class="top-bar-section">
-        <ul class="title-area">
-            <li class="name">
-                <h1>@Html.ActionLink("Lab1", "Lab1", "Home")</h1>
-            </li>
-            <li class="name">
-                <h1>@Html.ActionLink("Lab2", "Lab2", "Home")</h1>
-            </li>
-        </ul>
-    </section>
-</nav>
+@{
+    ViewBag.Title = "Home";
+}
