--- a/COSII/COSII_Lab/UI/Views/Shared/_Layout.cshtml
+++ b/COSII/COSII_Lab/UI/Views/Shared/_Layout.cshtml
@@ -8,8 +8,23 @@
     <script src="~/Scripts/knockout-2.2.1.js"></script>
     <script src="~/Scripts/globalize.min.js"></script>
     <script src="~/Scripts/dx.chartjs.js"></script>
-    <script src="~/Scripts/fourierCharts.js"></script>
+    <script src="~/Scripts/charts.js"></script>
 </head>
+<nav class="top-bar top-bar-padding">
+    <section class="top-bar-section">
+        <ul class="title-area">
+            <li class="name">
+                <h1>@Html.ActionLink("Lab1", "Lab1", "Home")</h1>
+            </li>
+            <li class="name">
+                <h1>@Html.ActionLink("Lab2", "Lab2", "Home")</h1>
+            </li>
+            <li class="name">
+                <h1>@Html.ActionLink("Lab3", "Lab3", "Home")</h1>
+            </li>
+        </ul>
+    </section>
+</nav>
 <body>
     @RenderBody()
 </body>
