--- a/COSII/COSII_Lab/UI/Views/Shared/_Layout.cshtml
+++ b/COSII/COSII_Lab/UI/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
             <li class="name">
                 <h1>@Html.ActionLink("Lab3", "Lab3", "Home")</h1>
             </li>
+            <li class="name">
+                <h1>@Html.ActionLink("Lab4", "Lab4", "Home")</h1>
+            </li>
         </ul>
     </section>
 </nav>
